inst/grammar/gram.output
Terminals unused in grammar

   ERROR
   INCOMPLETE_STRING
   COMMENT
   LINE_DIRECTIVE
   SYMBOL_FORMALS
   EQ_FORMALS
   EQ_SUB
   SYMBOL_SUB
   SYMBOL_FUNCTION_CALL
   SYMBOL_PACKAGE
   COLON_ASSIGN
   SLOT
   NOT
   UPLUS


State 31 conflicts: 29 shift/reduce
State 44 conflicts: 1 shift/reduce
State 45 conflicts: 1 shift/reduce
State 46 conflicts: 1 shift/reduce
State 47 conflicts: 1 shift/reduce
State 48 conflicts: 1 shift/reduce
State 49 conflicts: 1 shift/reduce
State 50 conflicts: 1 shift/reduce
State 60 conflicts: 1 shift/reduce
State 118 conflicts: 1 shift/reduce
State 120 conflicts: 1 shift/reduce
State 122 conflicts: 1 shift/reduce
State 123 conflicts: 1 shift/reduce
State 124 conflicts: 1 shift/reduce
State 125 conflicts: 1 shift/reduce
State 126 conflicts: 1 shift/reduce
State 127 conflicts: 1 shift/reduce
State 128 conflicts: 1 shift/reduce
State 129 conflicts: 1 shift/reduce
State 130 conflicts: 1 shift/reduce
State 131 conflicts: 1 shift/reduce
State 132 conflicts: 1 shift/reduce
State 133 conflicts: 1 shift/reduce
State 134 conflicts: 1 shift/reduce
State 135 conflicts: 1 shift/reduce
State 136 conflicts: 1 shift/reduce
State 137 conflicts: 1 shift/reduce
State 138 conflicts: 1 shift/reduce
State 139 conflicts: 1 shift/reduce
State 140 conflicts: 1 shift/reduce
State 141 conflicts: 1 shift/reduce
State 148 conflicts: 28 shift/reduce


Grammar

    0 $accept: prog $end

    1 prog: END_OF_INPUT
    2     | '\n'
    3     | expr_or_assign '\n'
    4     | expr_or_assign ';'
    5     | error

    6 expr_or_assign: expr
    7               | equal_assign

    8 equal_assign: expr EQ_ASSIGN expr_or_assign

    9 expr: NUM_CONST
   10     | RAW_STR_CONST
   11     | GLUE_STR_CONST
   12     | STR_CONST
   13     | NULL_CONST
   14     | SYMBOL
   15     | '{' exprlist '}'
   16     | '(' expr_or_assign ')'
   17     | '[' sublist ']'
   18     | '-' expr
   19     | '+' expr
   20     | '!' expr
   21     | '~' expr
   22     | UNQUOTE expr
   23     | UNQUOTESPLICE expr
   24     | SPECIAL expr
   25     | '?' expr
   26     | expr ':' expr
   27     | expr '+' expr
   28     | expr '-' expr
   29     | expr '*' expr
   30     | expr '/' expr
   31     | expr '^' expr
   32     | expr SPECIAL expr
   33     | expr '%' expr
   34     | expr '~' expr
   35     | expr '?' expr
   36     | expr LT expr
   37     | expr LE expr
   38     | expr EQ expr
   39     | expr NE expr
   40     | expr GE expr
   41     | expr GT expr
   42     | expr AND expr
   43     | expr OR expr
   44     | expr AND2 expr
   45     | expr OR2 expr
   46     | expr PIPE expr
   47     | expr LEFT_ASSIGN expr
   48     | expr RIGHT_ASSIGN expr
   49     | FUNCTION '(' formlist ')' cr expr_or_assign
   50     | expr '(' sublist ')'
   51     | IF ifcond expr_or_assign
   52     | IF ifcond expr_or_assign ELSE expr_or_assign
   53     | FOR forcond expr_or_assign
   54     | WHILE cond expr_or_assign
   55     | REPEAT expr_or_assign
   56     | expr LBB sublist ']' ']'
   57     | expr '[' sublist ']'
   58     | SYMBOL NS_GET SYMBOL
   59     | SYMBOL NS_GET STR_CONST
   60     | STR_CONST NS_GET SYMBOL
   61     | STR_CONST NS_GET STR_CONST
   62     | SYMBOL NS_GET_INT SYMBOL
   63     | SYMBOL NS_GET_INT STR_CONST
   64     | STR_CONST NS_GET_INT SYMBOL
   65     | STR_CONST NS_GET_INT STR_CONST
   66     | expr '$' SYMBOL
   67     | expr '$' STR_CONST
   68     | expr '@' SYMBOL
   69     | expr '@' STR_CONST
   70     | NEXT
   71     | BREAK

   72 cond: '(' expr ')'

   73 ifcond: '(' expr ')'

   74 forcond: '(' SYMBOL IN expr ')'

   75 exprlist: %empty
   76         | expr_or_assign
   77         | exprlist ';' expr_or_assign
   78         | exprlist ';'
   79         | exprlist '\n' expr_or_assign
   80         | exprlist '\n'

   81 sublist: sub
   82        | sublist cr ',' sub

   83 sub: %empty
   84    | expr
   85    | SYMBOL EQ_ASSIGN
   86    | SYMBOL EQ_ASSIGN expr
   87    | STR_CONST EQ_ASSIGN
   88    | STR_CONST EQ_ASSIGN expr
   89    | NULL_CONST EQ_ASSIGN
   90    | NULL_CONST EQ_ASSIGN expr

   91 formlist: %empty
   92         | SYMBOL
   93         | SYMBOL EQ_ASSIGN expr
   94         | formlist ',' SYMBOL
   95         | formlist ',' SYMBOL EQ_ASSIGN expr

   96 cr: %empty


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 2 3 79 80
'!' (33) 20
'$' (36) 66 67
'%' (37) 33
'(' (40) 16 49 50 72 73 74
')' (41) 16 49 50 72 73 74
'*' (42) 29
'+' (43) 19 27
',' (44) 82 94 95
'-' (45) 18 28
'/' (47) 30
':' (58) 26
';' (59) 4 77 78
'?' (63) 25 35
'@' (64) 68 69
'[' (91) 17 57
']' (93) 17 56 57
'^' (94) 31
'{' (123) 15
'}' (125) 15
'~' (126) 21 34
error (256) 5
END_OF_INPUT (258) 1
ERROR (259)
STR_CONST (260) 12 59 60 61 63 64 65 67 69 87 88
RAW_STR_CONST (261) 10
GLUE_STR_CONST (262) 11
NUM_CONST (263) 9
NULL_CONST (264) 13 89 90
SYMBOL (265) 14 58 59 60 62 63 64 66 68 74 85 86 92 93 94 95
FUNCTION (266) 49
INCOMPLETE_STRING (267)
LEFT_ASSIGN (268) 47
EQ_ASSIGN (269) 8 85 86 87 88 89 90 93 95
RIGHT_ASSIGN (270) 48
LBB (271) 56
FOR (272) 53
IN (273) 74
IF (274) 51 52
ELSE (275) 52
WHILE (276) 54
NEXT (277) 70
BREAK (278) 71
REPEAT (279) 55
GT (280) 41
GE (281) 40
LT (282) 36
LE (283) 37
EQ (284) 38
NE (285) 39
AND (286) 42
OR (287) 43
AND2 (288) 44
OR2 (289) 45
NS_GET (290) 58 59 60 61
NS_GET_INT (291) 62 63 64 65
COMMENT (292)
LINE_DIRECTIVE (293)
SYMBOL_FORMALS (294)
EQ_FORMALS (295)
EQ_SUB (296)
SYMBOL_SUB (297)
SYMBOL_FUNCTION_CALL (298)
SYMBOL_PACKAGE (299)
COLON_ASSIGN (300)
SLOT (301)
PIPE (302) 46
LOW (303)
TILDE (304)
UNOT (305)
NOT (306)
SPECIAL (307) 24 32
UMINUS (308)
UPLUS (309)
UNQUOTE (310) 22
UNQUOTESPLICE (311) 23


Nonterminals, with rules where they appear

$accept (78)
    on left: 0
prog (79)
    on left: 1 2 3 4 5, on right: 0
expr_or_assign (80)
    on left: 6 7, on right: 3 4 8 16 49 51 52 53 54 55 76 77 79
equal_assign (81)
    on left: 8, on right: 7
expr (82)
    on left: 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27
    28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48
    49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69
    70 71, on right: 6 8 18 19 20 21 22 23 24 25 26 27 28 29 30 31
    32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 50 56 57 66
    67 68 69 72 73 74 84 86 88 90 93 95
cond (83)
    on left: 72, on right: 54
ifcond (84)
    on left: 73, on right: 51 52
forcond (85)
    on left: 74, on right: 53
exprlist (86)
    on left: 75 76 77 78 79 80, on right: 15 77 78 79 80
sublist (87)
    on left: 81 82, on right: 17 50 56 57 82
sub (88)
    on left: 83 84 85 86 87 88 89 90, on right: 81 82
formlist (89)
    on left: 91 92 93 94 95, on right: 49 94 95
cr (90)
    on left: 96, on right: 49 82


State 0

    0 $accept: . prog $end

    error           shift, and go to state 1
    END_OF_INPUT    shift, and go to state 2
    STR_CONST       shift, and go to state 3
    RAW_STR_CONST   shift, and go to state 4
    GLUE_STR_CONST  shift, and go to state 5
    NUM_CONST       shift, and go to state 6
    NULL_CONST      shift, and go to state 7
    SYMBOL          shift, and go to state 8
    FUNCTION        shift, and go to state 9
    FOR             shift, and go to state 10
    IF              shift, and go to state 11
    WHILE           shift, and go to state 12
    NEXT            shift, and go to state 13
    BREAK           shift, and go to state 14
    REPEAT          shift, and go to state 15
    '?'             shift, and go to state 16
    '~'             shift, and go to state 17
    '+'             shift, and go to state 18
    '-'             shift, and go to state 19
    SPECIAL         shift, and go to state 20
    UNQUOTE         shift, and go to state 21
    UNQUOTESPLICE   shift, and go to state 22
    '('             shift, and go to state 23
    '['             shift, and go to state 24
    '\n'            shift, and go to state 25
    '{'             shift, and go to state 26
    '!'             shift, and go to state 27

    prog            go to state 28
    expr_or_assign  go to state 29
    equal_assign    go to state 30
    expr            go to state 31


State 1

    5 prog: error .

    $default  reduce using rule 5 (prog)


State 2

    1 prog: END_OF_INPUT .

    $default  reduce using rule 1 (prog)


State 3

   12 expr: STR_CONST .
   60     | STR_CONST . NS_GET SYMBOL
   61     | STR_CONST . NS_GET STR_CONST
   64     | STR_CONST . NS_GET_INT SYMBOL
   65     | STR_CONST . NS_GET_INT STR_CONST

    NS_GET      shift, and go to state 32
    NS_GET_INT  shift, and go to state 33

    $default  reduce using rule 12 (expr)


State 4

   10 expr: RAW_STR_CONST .

    $default  reduce using rule 10 (expr)


State 5

   11 expr: GLUE_STR_CONST .

    $default  reduce using rule 11 (expr)


State 6

    9 expr: NUM_CONST .

    $default  reduce using rule 9 (expr)


State 7

   13 expr: NULL_CONST .

    $default  reduce using rule 13 (expr)


State 8

   14 expr: SYMBOL .
   58     | SYMBOL . NS_GET SYMBOL
   59     | SYMBOL . NS_GET STR_CONST
   62     | SYMBOL . NS_GET_INT SYMBOL
   63     | SYMBOL . NS_GET_INT STR_CONST

    NS_GET      shift, and go to state 34
    NS_GET_INT  shift, and go to state 35

    $default  reduce using rule 14 (expr)


State 9

   49 expr: FUNCTION . '(' formlist ')' cr expr_or_assign

    '('  shift, and go to state 36


State 10

   53 expr: FOR . forcond expr_or_assign

    '('  shift, and go to state 37

    forcond  go to state 38


State 11

   51 expr: IF . ifcond expr_or_assign
   52     | IF . ifcond expr_or_assign ELSE expr_or_assign

    '('  shift, and go to state 39

    ifcond  go to state 40


State 12

   54 expr: WHILE . cond expr_or_assign

    '('  shift, and go to state 41

    cond  go to state 42


State 13

   70 expr: NEXT .

    $default  reduce using rule 70 (expr)


State 14

   71 expr: BREAK .

    $default  reduce using rule 71 (expr)


State 15

   55 expr: REPEAT . expr_or_assign

    STR_CONST       shift, and go to state 3
    RAW_STR_CONST   shift, and go to state 4
    GLUE_STR_CONST  shift, and go to state 5
    NUM_CONST       shift, and go to state 6
    NULL_CONST      shift, and go to state 7
    SYMBOL          shift, and go to state 8
    FUNCTION        shift, and go to state 9
    FOR             shift, and go to state 10
    IF              shift, and go to state 11
    WHILE           shift, and go to state 12
    NEXT            shift, and go to state 13
    BREAK           shift, and go to state 14
    REPEAT          shift, and go to state 15
    '?'             shift, and go to state 16
    '~'             shift, and go to state 17
    '+'             shift, and go to state 18
    '-'             shift, and go to state 19
    SPECIAL         shift, and go to state 20
    UNQUOTE         shift, and go to state 21
    UNQUOTESPLICE   shift, and go to state 22
    '('             shift, and go to state 23
    '['             shift, and go to state 24
    '{'             shift, and go to state 26
    '!'             shift, and go to state 27

    expr_or_assign  go to state 43
    equal_assign    go to state 30
    expr            go to state 31


State 16

   25 expr: '?' . expr

    STR_CONST       shift, and go to state 3
    RAW_STR_CONST   shift, and go to state 4
    GLUE_STR_CONST  shift, and go to state 5
    NUM_CONST       shift, and go to state 6
    NULL_CONST      shift, and go to state 7
    SYMBOL          shift, and go to state 8
    FUNCTION        shift, and go to state 9
    FOR             shift, and go to state 10
    IF              shift, and go to state 11
    WHILE           shift, and go to state 12
    NEXT            shift, and go to state 13
    BREAK           shift, and go to state 14
    REPEAT          shift, and go to state 15
    '?'             shift, and go to state 16
    '~'             shift, and go to state 17
    '+'             shift, and go to state 18
    '-'             shift, and go to state 19
    SPECIAL         shift, and go to state 20
    UNQUOTE         shift, and go to state 21
    UNQUOTESPLICE   shift, and go to state 22
    '('             shift, and go to state 23
    '['             shift, and go to state 24
    '{'             shift, and go to state 26
    '!'             shift, and go to state 27

    expr  go to state 44


State 17

   21 expr: '~' . expr

    STR_CONST       shift, and go to state 3
    RAW_STR_CONST   shift, and go to state 4
    GLUE_STR_CONST  shift, and go to state 5
    NUM_CONST       shift, and go to state 6
    NULL_CONST      shift, and go to state 7
    SYMBOL          shift, and go to state 8
    FUNCTION        shift, and go to state 9
    FOR             shift, and go to state 10
    IF              shift, and go to state 11
    WHILE           shift, and go to state 12
    NEXT            shift, and go to state 13
    BREAK           shift, and go to state 14
    REPEAT          shift, and go to state 15
    '?'             shift, and go to state 16
    '~'             shift, and go to state 17
    '+'             shift, and go to state 18
    '-'             shift, and go to state 19
    SPECIAL         shift, and go to state 20
    UNQUOTE         shift, and go to state 21
    UNQUOTESPLICE   shift, and go to state 22
    '('             shift, and go to state 23
    '['             shift, and go to state 24
    '{'             shift, and go to state 26
    '!'             shift, and go to state 27

    expr  go to state 45


State 18

   19 expr: '+' . expr

    STR_CONST       shift, and go to state 3
    RAW_STR_CONST   shift, and go to state 4
    GLUE_STR_CONST  shift, and go to state 5
    NUM_CONST       shift, and go to state 6
    NULL_CONST      shift, and go to state 7
    SYMBOL          shift, and go to state 8
    FUNCTION        shift, and go to state 9
    FOR             shift, and go to state 10
    IF              shift, and go to state 11
    WHILE           shift, and go to state 12
    NEXT            shift, and go to state 13
    BREAK           shift, and go to state 14
    REPEAT          shift, and go to state 15
    '?'             shift, and go to state 16
    '~'             shift, and go to state 17
    '+'             shift, and go to state 18
    '-'             shift, and go to state 19
    SPECIAL         shift, and go to state 20
    UNQUOTE         shift, and go to state 21
    UNQUOTESPLICE   shift, and go to state 22
    '('             shift, and go to state 23
    '['             shift, and go to state 24
    '{'             shift, and go to state 26
    '!'             shift, and go to state 27

    expr  go to state 46


State 19

   18 expr: '-' . expr

    STR_CONST       shift, and go to state 3
    RAW_STR_CONST   shift, and go to state 4
    GLUE_STR_CONST  shift, and go to state 5
    NUM_CONST       shift, and go to state 6
    NULL_CONST      shift, and go to state 7
    SYMBOL          shift, and go to state 8
    FUNCTION        shift, and go to state 9
    FOR             shift, and go to state 10
    IF              shift, and go to state 11
    WHILE           shift, and go to state 12
    NEXT            shift, and go to state 13
    BREAK           shift, and go to state 14
    REPEAT          shift, and go to state 15
    '?'             shift, and go to state 16
    '~'             shift, and go to state 17
    '+'             shift, and go to state 18
    '-'             shift, and go to state 19
    SPECIAL         shift, and go to state 20
    UNQUOTE         shift, and go to state 21
    UNQUOTESPLICE   shift, and go to state 22
    '('             shift, and go to state 23
    '['             shift, and go to state 24
    '{'             shift, and go to state 26
    '!'             shift, and go to state 27

    expr  go to state 47


State 20

   24 expr: SPECIAL . expr

    STR_CONST       shift, and go to state 3
    RAW_STR_CONST   shift, and go to state 4
    GLUE_STR_CONST  shift, and go to state 5
    NUM_CONST       shift, and go to state 6
    NULL_CONST      shift, and go to state 7
    SYMBOL          shift, and go to state 8
    FUNCTION        shift, and go to state 9
    FOR             shift, and go to state 10
    IF              shift, and go to state 11
    WHILE           shift, and go to state 12
    NEXT            shift, and go to state 13
    BREAK           shift, and go to state 14
    REPEAT          shift, and go to state 15
    '?'             shift, and go to state 16
    '~'             shift, and go to state 17
    '+'             shift, and go to state 18
    '-'             shift, and go to state 19
    SPECIAL         shift, and go to state 20
    UNQUOTE         shift, and go to state 21
    UNQUOTESPLICE   shift, and go to state 22
    '('             shift, and go to state 23
    '['             shift, and go to state 24
    '{'             shift, and go to state 26
    '!'             shift, and go to state 27

    expr  go to state 48


State 21

   22 expr: UNQUOTE . expr

    STR_CONST       shift, and go to state 3
    RAW_STR_CONST   shift, and go to state 4
    GLUE_STR_CONST  shift, and go to state 5
    NUM_CONST       shift, and go to state 6
    NULL_CONST      shift, and go to state 7
    SYMBOL          shift, and go to state 8
    FUNCTION        shift, and go to state 9
    FOR             shift, and go to state 10
    IF              shift, and go to state 11
    WHILE           shift, and go to state 12
    NEXT            shift, and go to state 13
    BREAK           shift, and go to state 14
    REPEAT          shift, and go to state 15
    '?'             shift, and go to state 16
    '~'             shift, and go to state 17
    '+'             shift, and go to state 18
    '-'             shift, and go to state 19
    SPECIAL         shift, and go to state 20
    UNQUOTE         shift, and go to state 21
    UNQUOTESPLICE   shift, and go to state 22
    '('             shift, and go to state 23
    '['             shift, and go to state 24
    '{'             shift, and go to state 26
    '!'             shift, and go to state 27

    expr  go to state 49


State 22

   23 expr: UNQUOTESPLICE . expr

    STR_CONST       shift, and go to state 3
    RAW_STR_CONST   shift, and go to state 4
    GLUE_STR_CONST  shift, and go to state 5
    NUM_CONST       shift, and go to state 6
    NULL_CONST      shift, and go to state 7
    SYMBOL          shift, and go to state 8
    FUNCTION        shift, and go to state 9
    FOR             shift, and go to state 10
    IF              shift, and go to state 11
    WHILE           shift, and go to state 12
    NEXT            shift, and go to state 13
    BREAK           shift, and go to state 14
    REPEAT          shift, and go to state 15
    '?'             shift, and go to state 16
    '~'             shift, and go to state 17
    '+'             shift, and go to state 18
    '-'             shift, and go to state 19
    SPECIAL         shift, and go to state 20
    UNQUOTE         shift, and go to state 21
    UNQUOTESPLICE   shift, and go to state 22
    '('             shift, and go to state 23
    '['             shift, and go to state 24
    '{'             shift, and go to state 26
    '!'             shift, and go to state 27

    expr  go to state 50


State 23

   16 expr: '(' . expr_or_assign ')'

    STR_CONST       shift, and go to state 3
    RAW_STR_CONST   shift, and go to state 4
    GLUE_STR_CONST  shift, and go to state 5
    NUM_CONST       shift, and go to state 6
    NULL_CONST      shift, and go to state 7
    SYMBOL          shift, and go to state 8
    FUNCTION        shift, and go to state 9
    FOR             shift, and go to state 10
    IF              shift, and go to state 11
    WHILE           shift, and go to state 12
    NEXT            shift, and go to state 13
    BREAK           shift, and go to state 14
    REPEAT          shift, and go to state 15
    '?'             shift, and go to state 16
    '~'             shift, and go to state 17
    '+'             shift, and go to state 18
    '-'             shift, and go to state 19
    SPECIAL         shift, and go to state 20
    UNQUOTE         shift, and go to state 21
    UNQUOTESPLICE   shift, and go to state 22
    '('             shift, and go to state 23
    '['             shift, and go to state 24
    '{'             shift, and go to state 26
    '!'             shift, and go to state 27

    expr_or_assign  go to state 51
    equal_assign    go to state 30
    expr            go to state 31


State 24

   17 expr: '[' . sublist ']'

    STR_CONST       shift, and go to state 52
    RAW_STR_CONST   shift, and go to state 4
    GLUE_STR_CONST  shift, and go to state 5
    NUM_CONST       shift, and go to state 6
    NULL_CONST      shift, and go to state 53
    SYMBOL          shift, and go to state 54
    FUNCTION        shift, and go to state 9
    FOR             shift, and go to state 10
    IF              shift, and go to state 11
    WHILE           shift, and go to state 12
    NEXT            shift, and go to state 13
    BREAK           shift, and go to state 14
    REPEAT          shift, and go to state 15
    '?'             shift, and go to state 16
    '~'             shift, and go to state 17
    '+'             shift, and go to state 18
    '-'             shift, and go to state 19
    SPECIAL         shift, and go to state 20
    UNQUOTE         shift, and go to state 21
    UNQUOTESPLICE   shift, and go to state 22
    '('             shift, and go to state 23
    '['             shift, and go to state 24
    '{'             shift, and go to state 26
    '!'             shift, and go to state 27

    $default  reduce using rule 83 (sub)

    expr     go to state 55
    sublist  go to state 56
    sub      go to state 57


State 25

    2 prog: '\n' .

    $default  reduce using rule 2 (prog)


State 26

   15 expr: '{' . exprlist '}'

    STR_CONST       shift, and go to state 3
    RAW_STR_CONST   shift, and go to state 4
    GLUE_STR_CONST  shift, and go to state 5
    NUM_CONST       shift, and go to state 6
    NULL_CONST      shift, and go to state 7
    SYMBOL          shift, and go to state 8
    FUNCTION        shift, and go to state 9
    FOR             shift, and go to state 10
    IF              shift, and go to state 11
    WHILE           shift, and go to state 12
    NEXT            shift, and go to state 13
    BREAK           shift, and go to state 14
    REPEAT          shift, and go to state 15
    '?'             shift, and go to state 16
    '~'             shift, and go to state 17
    '+'             shift, and go to state 18
    '-'             shift, and go to state 19
    SPECIAL         shift, and go to state 20
    UNQUOTE         shift, and go to state 21
    UNQUOTESPLICE   shift, and go to state 22
    '('             shift, and go to state 23
    '['             shift, and go to state 24
    '{'             shift, and go to state 26
    '!'             shift, and go to state 27

    $default  reduce using rule 75 (exprlist)

    expr_or_assign  go to state 58
    equal_assign    go to state 30
    expr            go to state 31
    exprlist        go to state 59


State 27

   20 expr: '!' . expr

    STR_CONST       shift, and go to state 3
    RAW_STR_CONST   shift, and go to state 4
    GLUE_STR_CONST  shift, and go to state 5
    NUM_CONST       shift, and go to state 6
    NULL_CONST      shift, and go to state 7
    SYMBOL          shift, and go to state 8
    FUNCTION        shift, and go to state 9
    FOR             shift, and go to state 10
    IF              shift, and go to state 11
    WHILE           shift, and go to state 12
    NEXT            shift, and go to state 13
    BREAK           shift, and go to state 14
    REPEAT          shift, and go to state 15
    '?'             shift, and go to state 16
    '~'             shift, and go to state 17
    '+'             shift, and go to state 18
    '-'             shift, and go to state 19
    SPECIAL         shift, and go to state 20
    UNQUOTE         shift, and go to state 21
    UNQUOTESPLICE   shift, and go to state 22
    '('             shift, and go to state 23
    '['             shift, and go to state 24
    '{'             shift, and go to state 26
    '!'             shift, and go to state 27

    expr  go to state 60


State 28

    0 $accept: prog . $end

    $end  shift, and go to state 61


State 29

    3 prog: expr_or_assign . '\n'
    4     | expr_or_assign . ';'

    '\n'  shift, and go to state 62
    ';'   shift, and go to state 63


State 30

    7 expr_or_assign: equal_assign .

    $default  reduce using rule 7 (expr_or_assign)


State 31

    6 expr_or_assign: expr .
    8 equal_assign: expr . EQ_ASSIGN expr_or_assign
   26 expr: expr . ':' expr
   27     | expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   31     | expr . '^' expr
   32     | expr . SPECIAL expr
   33     | expr . '%' expr
   34     | expr . '~' expr
   35     | expr . '?' expr
   36     | expr . LT expr
   37     | expr . LE expr
   38     | expr . EQ expr
   39     | expr . NE expr
   40     | expr . GE expr
   41     | expr . GT expr
   42     | expr . AND expr
   43     | expr . OR expr
   44     | expr . AND2 expr
   45     | expr . OR2 expr
   46     | expr . PIPE expr
   47     | expr . LEFT_ASSIGN expr
   48     | expr . RIGHT_ASSIGN expr
   50     | expr . '(' sublist ')'
   56     | expr . LBB sublist ']' ']'
   57     | expr . '[' sublist ']'
   66     | expr . '$' SYMBOL
   67     | expr . '$' STR_CONST
   68     | expr . '@' SYMBOL
   69     | expr . '@' STR_CONST

    LEFT_ASSIGN   shift, and go to state 64
    EQ_ASSIGN     shift, and go to state 65
    RIGHT_ASSIGN  shift, and go to state 66
    LBB           shift, and go to state 67
    GT            shift, and go to state 68
    GE            shift, and go to state 69
    LT            shift, and go to state 70
    LE            shift, and go to state 71
    EQ            shift, and go to state 72
    NE            shift, and go to state 73
    AND           shift, and go to state 74
    OR            shift, and go to state 75
    AND2          shift, and go to state 76
    OR2           shift, and go to state 77
    PIPE          shift, and go to state 78
    '?'           shift, and go to state 79
    '~'           shift, and go to state 80
    '+'           shift, and go to state 81
    '-'           shift, and go to state 82
    '*'           shift, and go to state 83
    '/'           shift, and go to state 84
    SPECIAL       shift, and go to state 85
    ':'           shift, and go to state 86
    '^'           shift, and go to state 87
    '$'           shift, and go to state 88
    '@'           shift, and go to state 89
    '('           shift, and go to state 90
    '['           shift, and go to state 91
    '%'           shift, and go to state 92

    LEFT_ASSIGN   [reduce using rule 6 (expr_or_assign)]
    EQ_ASSIGN     [reduce using rule 6 (expr_or_assign)]
    RIGHT_ASSIGN  [reduce using rule 6 (expr_or_assign)]
    LBB           [reduce using rule 6 (expr_or_assign)]
    GT            [reduce using rule 6 (expr_or_assign)]
    GE            [reduce using rule 6 (expr_or_assign)]
    LT            [reduce using rule 6 (expr_or_assign)]
    LE            [reduce using rule 6 (expr_or_assign)]
    EQ            [reduce using rule 6 (expr_or_assign)]
    NE            [reduce using rule 6 (expr_or_assign)]
    AND           [reduce using rule 6 (expr_or_assign)]
    OR            [reduce using rule 6 (expr_or_assign)]
    AND2          [reduce using rule 6 (expr_or_assign)]
    OR2           [reduce using rule 6 (expr_or_assign)]
    PIPE          [reduce using rule 6 (expr_or_assign)]
    '?'           [reduce using rule 6 (expr_or_assign)]
    '~'           [reduce using rule 6 (expr_or_assign)]
    '+'           [reduce using rule 6 (expr_or_assign)]
    '-'           [reduce using rule 6 (expr_or_assign)]
    '*'           [reduce using rule 6 (expr_or_assign)]
    '/'           [reduce using rule 6 (expr_or_assign)]
    SPECIAL       [reduce using rule 6 (expr_or_assign)]
    ':'           [reduce using rule 6 (expr_or_assign)]
    '^'           [reduce using rule 6 (expr_or_assign)]
    '$'           [reduce using rule 6 (expr_or_assign)]
    '@'           [reduce using rule 6 (expr_or_assign)]
    '('           [reduce using rule 6 (expr_or_assign)]
    '['           [reduce using rule 6 (expr_or_assign)]
    '%'           [reduce using rule 6 (expr_or_assign)]
    $default      reduce using rule 6 (expr_or_assign)


State 32

   60 expr: STR_CONST NS_GET . SYMBOL
   61     | STR_CONST NS_GET . STR_CONST

    STR_CONST  shift, and go to state 93
    SYMBOL     shift, and go to state 94


State 33

   64 expr: STR_CONST NS_GET_INT . SYMBOL
   65     | STR_CONST NS_GET_INT . STR_CONST

    STR_CONST  shift, and go to state 95
    SYMBOL     shift, and go to state 96


State 34

   58 expr: SYMBOL NS_GET . SYMBOL
   59     | SYMBOL NS_GET . STR_CONST

    STR_CONST  shift, and go to state 97
    SYMBOL     shift, and go to state 98


State 35

   62 expr: SYMBOL NS_GET_INT . SYMBOL
   63     | SYMBOL NS_GET_INT . STR_CONST

    STR_CONST  shift, and go to state 99
    SYMBOL     shift, and go to state 100


State 36

   49 expr: FUNCTION '(' . formlist ')' cr expr_or_assign

    SYMBOL  shift, and go to state 101

    $default  reduce using rule 91 (formlist)

    formlist  go to state 102


State 37

   74 forcond: '(' . SYMBOL IN expr ')'

    SYMBOL  shift, and go to state 103


State 38

   53 expr: FOR forcond . expr_or_assign

    STR_CONST       shift, and go to state 3
    RAW_STR_CONST   shift, and go to state 4
    GLUE_STR_CONST  shift, and go to state 5
    NUM_CONST       shift, and go to state 6
    NULL_CONST      shift, and go to state 7
    SYMBOL          shift, and go to state 8
    FUNCTION        shift, and go to state 9
    FOR             shift, and go to state 10
    IF              shift, and go to state 11
    WHILE           shift, and go to state 12
    NEXT            shift, and go to state 13
    BREAK           shift, and go to state 14
    REPEAT          shift, and go to state 15
    '?'             shift, and go to state 16
    '~'             shift, and go to state 17
    '+'             shift, and go to state 18
    '-'             shift, and go to state 19
    SPECIAL         shift, and go to state 20
    UNQUOTE         shift, and go to state 21
    UNQUOTESPLICE   shift, and go to state 22
    '('             shift, and go to state 23
    '['             shift, and go to state 24
    '{'             shift, and go to state 26
    '!'             shift, and go to state 27

    expr_or_assign  go to state 104
    equal_assign    go to state 30
    expr            go to state 31


State 39

   73 ifcond: '(' . expr ')'

    STR_CONST       shift, and go to state 3
    RAW_STR_CONST   shift, and go to state 4
    GLUE_STR_CONST  shift, and go to state 5
    NUM_CONST       shift, and go to state 6
    NULL_CONST      shift, and go to state 7
    SYMBOL          shift, and go to state 8
    FUNCTION        shift, and go to state 9
    FOR             shift, and go to state 10
    IF              shift, and go to state 11
    WHILE           shift, and go to state 12
    NEXT            shift, and go to state 13
    BREAK           shift, and go to state 14
    REPEAT          shift, and go to state 15
    '?'             shift, and go to state 16
    '~'             shift, and go to state 17
    '+'             shift, and go to state 18
    '-'             shift, and go to state 19
    SPECIAL         shift, and go to state 20
    UNQUOTE         shift, and go to state 21
    UNQUOTESPLICE   shift, and go to state 22
    '('             shift, and go to state 23
    '['             shift, and go to state 24
    '{'             shift, and go to state 26
    '!'             shift, and go to state 27

    expr  go to state 105


State 40

   51 expr: IF ifcond . expr_or_assign
   52     | IF ifcond . expr_or_assign ELSE expr_or_assign

    STR_CONST       shift, and go to state 3
    RAW_STR_CONST   shift, and go to state 4
    GLUE_STR_CONST  shift, and go to state 5
    NUM_CONST       shift, and go to state 6
    NULL_CONST      shift, and go to state 7
    SYMBOL          shift, and go to state 8
    FUNCTION        shift, and go to state 9
    FOR             shift, and go to state 10
    IF              shift, and go to state 11
    WHILE           shift, and go to state 12
    NEXT            shift, and go to state 13
    BREAK           shift, and go to state 14
    REPEAT          shift, and go to state 15
    '?'             shift, and go to state 16
    '~'             shift, and go to state 17
    '+'             shift, and go to state 18
    '-'             shift, and go to state 19
    SPECIAL         shift, and go to state 20
    UNQUOTE         shift, and go to state 21
    UNQUOTESPLICE   shift, and go to state 22
    '('             shift, and go to state 23
    '['             shift, and go to state 24
    '{'             shift, and go to state 26
    '!'             shift, and go to state 27

    expr_or_assign  go to state 106
    equal_assign    go to state 30
    expr            go to state 31


State 41

   72 cond: '(' . expr ')'
